--- a/src/components/styles/SearchComponent.css
+++ b/src/components/styles/SearchComponent.css
@@ -1,6 +1,8 @@
 /* styles/SearchComponent.css */
 
 .search-container {
+    display: flex;
+    flex-direction: column;
     max-width: 90%;
     margin: 0 auto; /* Center the container */
     padding: 20px;
@@ -11,38 +13,20 @@
 }
 
 .search-title {
-    margin-bottom: 15px;
+    margin-bottom: 15px; /* Space below title */
     font-size: 24px;
     color: #333;
 }
 
-.search-form {
-    display: flex;
-    flex-direction: column; /* Change to column layout */
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    gap: 15px; /* Add space between inputs */
+.button-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Create a 3-column grid */
+    gap: 15px; /* Space between buttons */
+    margin-top: 15px; /* Space above the button grid */
 }
 
-.search-input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 20px;
-    outline: none;
-    width: 80%; /* Adjust width as needed */
-    font-size: 16px;
-    transition: border-color 0.3s ease;
-    display: flex;
-    flex-direction: row;
-}
-
-.search-input:focus {
-    border-color: #2560df; /* Change border color on focus */
-}
-
-.search-button {
-    padding: 10px 15px;
+.route-button {
+    padding: 15px; /* Uniform padding for all buttons */
     border: none;
     background-color: #2560df; /* Primary color */
     color: white;
@@ -50,12 +34,13 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
     font-size: 16px;
+    width: 100%; /* Make buttons fill the grid cell */
 }
 
-.search-button:hover {
+.route-button:hover {
     background-color: #0056b3; /* Darker shade on hover */
 }
 
-.search-button:focus {
+.route-button:focus {
     outline: none; /* Remove outline when button is focused */
 }
