--- a/src/components/styles/RoutesComponent.css
+++ b/src/components/styles/RoutesComponent.css
@@ -16,6 +16,25 @@
   text-align: center; /* Center the title */
 }
 
+.route-info{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.route-button{
+  background-color: #007bff; /* Blue background */
+  color: white; /* White text */
+  border: none; /* Remove border */
+  border-radius: 5px; /* Rounded corners */
+  padding: 10px 20px; /* Padding */
+  font-size: 16px; /* Font size */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  margin-top: 10px; /* Space above the button */
+  transition: all 0.3s ease; /* Smooth transition on hover */
+}
+
 .dropdown {
   margin: 10px 0;
 }
